Fix chromosome removal logic in Individual.java
Refactor chromosome handling to remove last element correctly.