@@ -50,7 +50,7 @@ public class Individual {
             chromosome.add(gene);
         }
         while(chromosome.size()>c_max){
-            chromosome.removeLast();
+            chromosome.remove(chromosome.size()-1);
         }
        for(int i=0; i<chromosome.size();i++){
             Character gene;
@@ -126,7 +126,6 @@ public class Individual {
     public static void main(String[] args) {
         // This code will set a random seed when you're testing Individual (i.e., running it without GA_Simulation)
         Random rng = new Random(System.currentTimeMillis());
-
     }
 
 }
